--- a/views/user/add.html
+++ b/views/user/add.html
@@ -55,14 +55,14 @@
                         <div class="form-group">
                             <label for="fullName" class="col-sm-2 control-label">姓名</label>
                             <div class="col-sm-10 col-md-4">
-                                <input id="fullName" name="nickname" value=""
+                                <input id="fullName" name="fullName" value=""
                                        placeholder="请输入昵称" type="text" class="form-control field-text">
                             </div>
                         </div>
                         <div class="form-group">
                             <label for="fullNamePinYin" class="col-sm-2 control-label">姓名（拼音）</label>
                             <div class="col-sm-10 col-md-4">
-                                <input id="fullNamePinYin" name="nickname" value=""
+                                <input id="fullNamePinYin" name="fullNamePinyin" value=""
                                        placeholder="请输入昵称" type="text" class="form-control field-text">
                             </div>
                         </div>
