--- a/views/user/edit.html
+++ b/views/user/edit.html
@@ -20,7 +20,9 @@
                         <div class="form-group">
                             <label for="avatar" class="col-sm-2 control-label">头像</label>
                             <div class="col-sm-10 col-md-4">
-                                <input id="avatar" name="avatar" placeholder="请上传头像" data-initial-preview="{{.data.Avatar}}" type="file" class="form-control field-image" >
+                                <input id="avatar" name="avatar" placeholder="请上传头像"
+                                       data-initial-preview="{{.data.Avatar}}" type="file"
+                                       class="form-control field-image">
                             </div>
                         </div>
                         <script>
@@ -37,23 +39,6 @@
                             });
                         </script>
                         <div class="form-group">
-                            <label for="user_level_id" class="col-sm-2 control-label">用户等级</label>
-                            <div class="col-sm-10 col-md-4">
-                                <select name="user_level_id" id="user_level_id" class="form-control field-select"
-                                        data-placeholder="请选择用户等级">
-                                    <option value=""></option>
-                                    {{range $key,$item := .user_level_list}}
-                                    <option value="{{$item.Id}}" {{if compare $.data.UserLevelId $item.Id}}selected {{end}}>
-                                        {{$item.Name}}
-                                    </option>
-                                    {{end}}
-                                </select>
-                            </div>
-                        </div>
-                        <script>
-                            $('#user_level_id').select2();
-                        </script>
-                        <div class="form-group">
                             <label for="username" class="col-sm-2 control-label">用户名</label>
                             <div class="col-sm-10 col-md-4">
                                 <input id="username" name="username" value="{{.data.Username}}"
@@ -68,10 +53,17 @@
                             </div>
                         </div>
                         <div class="form-group">
-                            <label for="nickname" class="col-sm-2 control-label">昵称</label>
+                            <label for="nickname" class="col-sm-2 control-label">姓名</label>
                             <div class="col-sm-10 col-md-4">
-                                <input id="nickname" name="nickname" value="{{.data.Nickname}}"
-                                       placeholder="请输入昵称" type="text" class="form-control field-text">
+                                <input id="nickname" name="fullName" value="{{.data.FullName}}"
+                                       placeholder="请输入姓名" type="text" class="form-control field-text">
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label for="fullNamePinyin" class="col-sm-2 control-label">姓名(拼音）</label>
+                            <div class="col-sm-10 col-md-4">
+                                <input id="fullNamePinyin" name="fullNamePinyin" value="{{.data.FullNamePinYin}}"
+                                       placeholder="请输入姓名" type="text" class="form-control field-text">
                             </div>
                         </div>
 
@@ -85,9 +77,10 @@
                         </div>
 
                         <div class="form-group">
-                            <label for="img" class="col-sm-2 control-label">描述</label>
+                            <label for="description" class="col-sm-2 control-label">描述</label>
                             <div class="col-sm-10 col-md-10">
                                 <script id="description" name="description" type="text/plain">{{str2html .data.Description}}
+
                                 </script>
                             </div>
                         </div>
@@ -101,7 +94,8 @@
                         <div class="form-group">
                             <label for="status" class="col-sm-2 control-label">是否启用</label>
                             <div class="col-sm-10 col-md-4">
-                                <input class="input-switch" id="status" value="1" {{if eq 1 .data.Status}}checked {{end}} type="checkbox"/>
+                                <input class="input-switch" id="status" value="1" {{if eq 1 .data.Status}}checked
+                                       {{end}} type="checkbox"/>
                                 <input class="switch field-switch" placeholder="是否启用" name="status"
                                        value="{{.data.Status}}" hidden/>
                             </div>
