--- a/views/user/add.html
+++ b/views/user/add.html
@@ -76,7 +76,7 @@
                         </div>
 
                         <div class="form-group">
-                            <label for="img" class="col-sm-2 control-label">描述</label>
+                            <label for="description" class="col-sm-2 control-label">描述</label>
                             <div class="col-sm-10 col-md-10">
                                 <script id="description" name="description" type="text/plain">
                                 </script>
