已经实现了高校信息管理模块，完善了培训计划管理模块

--- a/views/admin_log/index.html
+++ b/views/admin_log/index.html
@@ -82,7 +82,7 @@
                             <td>{{$item.LogIp}}</td>
                             <td>{{$item.CreateTime | UnixTimeForFormat}}</td>
                             <td class="td-do">
-                                <a data-id="{{$item.Id}}" data-url="view" data-confirm="2" data-type="2"
+                                <a data-id="{{$item.Id}}" data-url="/admin/university/add" data-confirm="2" data-type="2"
                                    class="btn btn-default btn-xs AjaxButton" data-title="日志详情" title="查看详情" data-toggle="tooltip">
                                     <i class="fa fa-eye"></i>
                                 </a>
