--- a/views/train_plan/add.html
+++ b/views/train_plan/add.html
@@ -77,10 +77,10 @@
                                 serverUrl: UEServer
                             });
                         </script>
-                        <a data-url="/admin/university/add" data-confirm="2" data-type="2"
-                           class="btn btn-default btn-xs AjaxButton" data-title="日志详情" title="查看详情"
+                        <a data-url="/admin/quota/index" data-confirm="2" data-type="2"
+                           class="btn btn-default btn-xs AjaxButton" data-title="管理报名名额" title="点击打开管理面板"
                            data-toggle="tooltip">
-                            <i class="fa fa-plus-square-o" aria-hidden="true"></i>新增参与高校
+                            <i class="fa fa-quora" aria-hidden="true"></i>管理各个高校报名名额
                         </a>
 
                     </div>
