--- a/views/train_plan/edit.html
+++ b/views/train_plan/edit.html
@@ -87,7 +87,11 @@
                             });
                         </script>
                     </div>
-
+                    <a data-url="/admin/quota/index" data-confirm="2" data-type="2" data-id="{{.data.Id}}"
+                       class="btn btn-default btn-xs AjaxButton" data-title="管理报名名额" title="点击打开管理面板"
+                       data-toggle="tooltip">
+                        <i class="fa fa-quora" aria-hidden="true"></i>管理各个高校报名名额
+                    </a>
                     <!--表单底部-->
                     <div class="box-footer">
                         <div class="col-sm-2">
@@ -109,6 +113,22 @@
                 </form>
             </div>
         </div>
+    </div>
+    <div class="modal fade" id="viewDialog" role="viewDialog" aria-hidden="true">
+        <div class="modal-dialog modal-full">
+            <div class="modal-content">
+                <div class="modal-header" style="padding:10px !important;padding-bottom:5px;border-bottom:0px !important;">
+                    <input type="button" value="上一张" onClick="javascript:maskprev(this)" style="margin-left:185px;">
+                    <input type="button" value="下一张" onClick="javascript:masknext(this)" style="margin-left:60px;">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true"><i class="fa fa-times"></i></button>
+                </div>
+                <div class="modal-body mask-layer-imgbox" style="padding-top:0px;text-align:center;"><!-- height:480px;width:600px -->
+
+                </div>
+            </div>
+            <!-- /.modal-content -->
+        </div>
+        <!-- /.modal-dialog -->
     </div>
 
 </section>
@@ -145,5 +165,15 @@
         },
 
     });
+
+    function viewFile() {
+
+        $('#viewDialog').modal({
+            backdrop:"static",
+            keyboard:false,
+            show: true
+        });
+    }
+
 </script>
 
