--- a/views/train_plan/index.html
+++ b/views/train_plan/index.html
@@ -3,7 +3,7 @@
         <div class="col-md-12">
             <div class="box">
                 <div class="box-body">
-                    <form class="form-inline searchForm" id="searchForm" action="/admin/admin_user/index" method="GET">
+                    <form class="form-inline searchForm" id="searchForm" action="/admin/train-management/index" method="GET">
 
                         <div class="form-group">
                             <input value="{{._keywords}}"
@@ -34,7 +34,7 @@
                         <a title="添加" data-toggle="tooltip" class="btn btn-primary btn-sm"  href="/admin/train-management/add">
                             <i class="fa fa-plus"></i> 发布新的培训计划
                         </a>
-                        <a class="btn btn-danger btn-sm AjaxButton" data-toggle="tooltip" title="删除选中数据" data-confirm-title="删除确认" data-confirm-content="您确定要删除选中的数据吗？" data-id="checked" data-url="/admin/admin_user/del">
+                        <a class="btn btn-danger btn-sm AjaxButton" data-toggle="tooltip" title="删除选中数据" data-confirm-title="删除确认" data-confirm-content="您确定要删除选中的数据吗？" data-id="checked" data-url="/admin/train-management/del">
                             <i class="fa fa-trash"></i> 删除
                         </a>
 
@@ -95,7 +95,7 @@
                                     <i class="fa fa-pencil"></i>
                                 </a>
 
-                                <a class="btn btn-danger btn-xs AjaxButton" data-toggle="tooltip" title="删除" data-csrf-token="" data-id="{{$item.Id}}" data-confirm-title="删除确认" data-confirm-content='您确定要删除ID为 <span class="text-red">{{$item.Id}}</span> 的数据吗' data-url="/admin/admin_user/del">
+                                <a class="btn btn-danger btn-xs AjaxButton" data-toggle="tooltip" title="删除" data-csrf-token="" data-id="{{$item.Id}}" data-confirm-title="删除确认" data-confirm-content='您确定要删除ID为 <span class="text-red">{{$item.Id}}</span> 的数据吗' data-url="/admin/train-management/del">
                                     <i class="fa fa-trash"></i>
                                 </a>
 
@@ -114,7 +114,7 @@
                                     <i class="fa fa-circle"></i>
                                 </a>
                                 {{end}}
-                                <a data-url="/admin/quota/index" data-confirm="2" data-type="2" data-id="{{$item.Id}}"
+                                <a data-url="/admin/petition/index" data-confirm="2" data-type="2" data-id="{{$item.Id}}"
                                    class="btn btn-default btn-xs AjaxButton" data-title="管理报名名额" title="点击打开管理面板"
                                    data-toggle="tooltip">
                                     管理报名申请表
