1.解决了跨域问题。2.更新了sql初始化文件。3.初步实现了以json形式获取培训计划列表的接口。

--- a/views/university/index.html
+++ b/views/university/index.html
@@ -34,11 +34,17 @@
                         <a title="添加" data-toggle="tooltip" class="btn btn-primary btn-sm" href="./add">
                             <i class="fa fa-plus"></i> 新增高校
                         </a>
+                        <a class="btn btn-warning btn-sm AjaxButton" data-toggle="tooltip" title="删除选中数据"
+                           data-confirm-title="删除确认" data-confirm-content="您确定要删除选中的数据吗？" data-id="checked"
+                           data-url="./del">
+                            <i class="fa fa-trash"></i> 批量导入
+                        </a>
                         <a class="btn btn-danger btn-sm AjaxButton" data-toggle="tooltip" title="删除选中数据"
                            data-confirm-title="删除确认" data-confirm-content="您确定要删除选中的数据吗？" data-id="checked"
                            data-url="./del">
                             <i class="fa fa-trash"></i> 删除
                         </a>
+
 
                         <a class="btn btn-success btn-sm ReloadButton" data-toggle="tooltip" title="刷新">
                             <i class="fa fa-refresh"></i> 刷新
