1.初步实现了培训计划的收藏记录持久化，以及收藏,取消收藏，检查是否收藏等服务。2.初步实现了报名申请数据模型。3.初步实现了普通用户登陆相关控制器（controller）。4.整理了项目路由router.

--- a/views/user/index.html
+++ b/views/user/index.html
@@ -160,6 +160,16 @@
                                     <i class="fa fa-circle"></i>
                                 </a>
                                 {{end}}
+                                <a data-url="/admin/petition/index" data-confirm="2" data-type="2" data-id="{{$item.Id}}"
+                                   class="btn btn-default btn-xs AjaxButton" data-title="管理报名名额" title="点击打开管理面板"
+                                   data-toggle="tooltip">
+                                    查看收藏的培训计划
+                                </a>
+                                <a data-url="/admin/petition/index" data-confirm="2" data-type="2" data-id="{{$item.Id}}"
+                                   class="btn btn-default btn-xs AjaxButton" data-title="管理报名名额" title="点击打开管理面板"
+                                   data-toggle="tooltip">
+                                    查看收藏的培训课程
+                                </a>
 
                             </td>
                         </tr>
